Fixed the header - white text and right alignment of small.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,9 +18,10 @@
 
 body {
   font-family: 'Comic Sans MS';
-  padding-top: 150px;
+  padding-top: 120px;
+  padding-bottom: 170px;
 }
 
-navbar {
-  
+.navbar-custom {
+  color: #FFFFFF;
 }
